# cash-flow-forecaster

./: .editorconfig  .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: alerts.py  auth.py  cache.py  config.py  fx.py  fx_forecast.py  fx_history.py  insights.py  main.py  otp_helpers.py  receivables.py  recurring.py  scenario.py  schemas.py  service.py  store.py
backend/app/actuals/: __init__.py  engine.py  router.py  sample_data.py  store.py
backend/app/analytics/: __init__.py  categories.py
backend/app/data/: aggregate.py  ingest.py  synthetic.py
backend/app/forecasting/: baselines.py  metrics.py  pipeline.py
backend/app/llm/: narrative.py  provider.py
backend/app/notifications/: __init__.py  email.py  slack.py  webhook_delivery.py
backend/app/routers/: accounts.py  arr_revenue.py  auth.py  budget.py  burn_rate.py  capex.py  cashflow_actuals.py  contact.py  customers_mrr.py  exim.py  financial_ratios.py  forecast.py  invoices.py  mfa.py  misc_b2b.py  notification_prefs.py  org.py  recurring.py  scenarios.py  scheduled_forecasts.py  stress.py  webhooks_config.py  working_capital.py
backend/app/security/: __init__.py  crypto.py
backend/tests/: conftest.py  test_auth.py  test_baselines.py  test_exim.py  test_insights.py  test_invoices.py  test_metrics.py  test_narrative_grounding.py  test_no_leakage.py  test_recurring.py  test_security.py  test_service_e2e.py  test_slack.py  test_upgrades.py
business-app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+154 files in other folders)
